# deeprank

./: .gitignore  CLAUDE.md  LICENSE  README.md  deeprank.py  pyproject.toml
deepordinal/: __init__.py  tf.py  torch.py
deeprank/: __init__.py  tf.py  torch.py
examples/: example_tf.ipynb  example_torch.ipynb
notebooks/: example.ipynb
tests/: test_tf.py  test_torch.py
