[project]
name = "deepordinal"
version = "0.2.0"
description = "Ordinal output layers and loss functions (Rennie & Srebro, 2005) for PyTorch and TF/Keras"
requires-python = ">=3.10"
dependencies = ["numpy"]
license = "MIT"
authors = [
    { name = "Nicholas Hirons" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ordinal-regression", "deep-learning", "pytorch", "tensorflow", "keras"]

[project.optional-dependencies]
tf = ["tensorflow>=2.0"]
torch = ["torch>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepordinal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[project.urls]
Repository = "https://github.com/nhirons/deepordinal"
